# jito-vault-whitelist

./: .gitignore  .pnp.cjs  Cargo.toml  README.md  codecov.yml  makefile  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml
cli/: Cargo.toml  README.md
cli/src/: cli_args.rs  lib.rs  vault_whitelist.rs  vault_whitelist_handler.rs
client/: Cargo.toml
client/src/: lib.rs
client/src/log/: config.rs  mod.rs  whitelist.rs
clients/rust/vault-whitelist-client/: Cargo.toml
clients/rust/vault-whitelist-client/src/: lib.rs
codama-cli/: Cargo.toml
codama-cli/src/: main.rs
config/: program.env
core/: Cargo.toml
core/src/: config.rs  discriminator.rs  lib.rs  whitelist.rs  whitelist_user.rs
data/: whitelist.json
idl/: jito_vault_whitelist.json  vault_whitelist.json
integration-tests/: Cargo.toml
integration-tests/tests/: tests.rs
integration-tests/tests/client/: mod.rs  restaking_clinet.rs  vault_client.rs  vault_whitelist_client.rs
integration-tests/tests/fixtures/: fixture.rs  mod.rs  vault_whitelist_client.rs
integration-tests/tests/vault_whitelist/: add_to_whitelist.rs  burn_withdrawal_ticket.rs  close_whitelist.rs  enqueue_withdrawal.rs  initialize_config.rs  initialize_whitelist.rs  mint.rs  mod.rs  remove_from_whitelist.rs  set_meta_merkle_root.rs  set_mint_burn_admin.rs
meta-merkle-tree/: Cargo.toml  README.md
meta-merkle-tree/src/: delegation.rs  error.rs  generated_merkle_tree.rs  generated_merkle_tree_collection.rs  lib.rs  merkle_tree.rs  meta_merkle_tree.rs  tree_node.rs  utils.rs  vault_whitelist_meta.rs  vault_whitelist_meta_collection.rs  vault_whitelist_meta_tree_node.rs  verify.rs
meta-merkle-tree/src/pubkey_string_conversion/: mod.rs
program/: Cargo.toml
program/src/: add_to_whitelist.rs  burn_withdrawal_ticket.rs  close_whitelist.rs  enqueue_withdrawal.rs  initialize_config.rs  initialize_whitelist.rs  lib.rs  mint.rs  remove_from_whitelist.rs  set_meta_merkle_root.rs  set_mint_burn_admin.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: generate-clients.js  generate-clients.ts
sdk/: Cargo.toml
sdk/src/: error.rs  instruction.rs  lib.rs
shank-cli/: Cargo.toml
shank-cli/src/: main.rs
vault-whitelist-core/: Cargo.toml
vault-whitelist-core/src/: config.rs  discriminator.rs  lib.rs
vault-whitelist-program/: Cargo.toml
vault-whitelist-program/src/: initialize_config.rs  lib.rs
vault-whitelist-sdk/: Cargo.toml
