[workspace]
members = [
	"client",
	"core",
	"integration-tests",
	"program",
	"sdk",
	"shank-cli", 
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "96ed3b791c6fed9ab64cb138397795fe55991280", features = ["idl-build"] }
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
dotenv = "0.15.0"
envfile = "0.2.1"
env_logger = "0.10.2"
fast-math = "0.1"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
hex = "0.4.3"
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-restaking-program = { package = "jito-restaking-program", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931", features = ["no-entrypoint"] }
jito-vault-core = { package = "jito-vault-core", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-vault-program = { package = "jito-vault-program", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931", features = ["no-entrypoint"] }
jito-vault-sdk = { package = "jito-vault-sdk", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-vault-whitelist-client = { path = "./client" }
jito-vault-whitelist-core = { path = "./core" }
jito-vault-whitelist-sdk = { path = "./sdk" }
jito-vault-whitelist-program = { path = "./program" }
log = "0.4.22"
meta-merkle-tree = { path = "meta_merkle_tree", version = "0.1.0" }
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = { version = "0.10.10", features = ["json"] }
rig-core = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-decoder = "2.1.18"
solana-cli-config = "2.1.18"
solana-program = "2.1.18"
solana-program-test = "2.1.18"
solana-sdk = "2.1.18"
solana-rpc-client = "2.1.18"
solana-rpc-client-api = "2.1.18"
thiserror = "1.0.57"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
