[workspace]
members = [
	"cli",
	"client",
	"core",
	"integration-tests",
	"meta-merkle-tree",
	"program",
	"sdk",
	"shank-cli", 
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { version = "0.31.0", features = ["idl-build"] }
anyhow = "1.0.94"
base64 = "0.22.1"
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
dotenv = "0.15.0"
envfile = "0.2.1"
env_logger = "0.10.2"
fast-math = "0.1"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
hex = "0.4.3"
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-restaking-core = { package = "jito-restaking-core", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-restaking-program = { package = "jito-restaking-program", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931", features = ["no-entrypoint"] }
jito-restaking-sdk = { package = "jito-restaking-sdk", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-restaking-client-common = { package = "jito-restaking-client-common", git = "https://github.com/jito-foundation/restaking", rev = "12fa363618696f2ed4d538c8c6a1c5604bea471b" }
jito-vault-core = { package = "jito-vault-core", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931" }
jito-vault-client = { package = "jito-vault-client", git = "https://github.com/jito-foundation/restaking", rev = "12fa363618696f2ed4d538c8c6a1c5604bea471b" }
jito-vault-program = { package = "jito-vault-program", git = "https://github.com/jito-foundation/restaking", rev = "fd0a42a60ce701691facc7c6cdf2c858bc639931", features = ["no-entrypoint"] }
jito-vault-sdk = { package = "jito-vault-sdk", git = "https://github.com/jito-foundation/restaking", rev = "6af1a30062504548da609b6bf9ad164da1627f76" }
jito-vault-whitelist-client = { path = "./client" }
jito-vault-whitelist-core = { path = "./core" }
jito-vault-whitelist-meta-merkle-tree = { path = "./meta-merkle-tree" }
jito-vault-whitelist-sdk = { path = "./sdk" }
jito-vault-whitelist-program = { path = "./program" }
log = "0.4.22"
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = { version = "0.10.10", features = ["json"] }
rig-core = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-decoder = "2.1.18"
solana-client = "2.1.18"
solana-cli-config = "2.1.18"
solana-program = "2.1.18"
solana-program-test = "2.1.18"
solana-remote-wallet = "~2.1"
solana-sdk = "2.1.18"
solana-rpc-client = "2.1.18"
solana-rpc-client-api = "2.1.18"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.57"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uriparse = "0.6.4"

