[package]
name = "jito-vault-whitelist-cli"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "jito-vault-whitelist-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
env_logger = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-client-common = { workspace = true }
jito-vault-client = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-sdk = { workspace = true }
jito-vault-whitelist-client = { workspace = true }
jito-vault-whitelist-core = { workspace = true }
log = { workspace = true }
meta-merkle-tree = { workspace = true }
solana-account-decoder = { workspace = true }
solana-cli-config = { workspace = true }
solana-program = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
uriparse = { workspace = true }
