[package]
name = "jito-vault-whitelist-client"
description = "Jito Vault Whitelist Program Client"
version = { workspace = true }
edition = { workspace = true }

[features]
serde = []
anchor = []
anchor-idl-build = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
