[package]
name = "jito-vault-whitelist-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
jito-account-traits-derive = { workspace = true }
jito-bytemuck = { workspace = true }
jito-vault-whitelist-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
