[package]
name = "integration-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]

[dev-dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
jito-vault-sdk = { workspace = true }
jito-vault-whitelist-client = { workspace = true, features = ["anchor"] }
jito-vault-whitelist-core = { workspace = true }
jito-vault-whitelist-meta-merkle-tree = { workspace = true }
jito-vault-whitelist-program = { workspace = true }
jito-vault-whitelist-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
