[package]
name = "jito-vault-whitelist-meta-merkle-tree"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
fast-math = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
