[package]
name = "vault-whitelist-program"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_whitelist_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh = { workspace = true }
jito-account-traits-derive = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
solana-program = { workspace = true }
vault-whitelist-core = { workspace = true }
vault-whitelist-sdk = { workspace = true }
