[package]
name = "jito-vault-whitelist-program"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_vault_whitelist_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
jito-vault-sdk = { workspace = true }
jito-vault-whitelist-core = { workspace = true }
jito-vault-whitelist-sdk = { workspace = true }
meta-merkle-tree = { workspace = true }
solana-program = { workspace = true }
